Department, Dashboard APIs